// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manager/gradle extractPackageFile should return gradle dependencies 1`] = `
Array [
  Object {
    "datasource": "maven",
    "deps": Array [
      Object {
        "currentValue": null,
        "depGroup": "org.springframework.boot",
        "depName": "org.springframework.boot:spring-boot-starter-jersey",
        "name": "spring-boot-starter-jersey",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "1.0-groovy-2.4",
        "depGroup": "org.spockframework",
        "depName": "org.spockframework:spock-core",
        "name": "spock-core",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "3.1",
        "depGroup": "cglib",
        "depName": "cglib:cglib-nodep",
        "name": "cglib-nodep",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "%scala-version%",
        "depGroup": "org.scala-lang",
        "depName": "org.scala-lang:scala-library",
        "name": "scala-library",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
        "skipReason": "version-placeholder",
      },
      Object {
        "currentValue": "3.9.0",
        "datasource": "sbt",
        "depGroup": "com.typesafe.scala-logging",
        "depName": "com.typesafe.scala-logging:scala-logging",
        "name": "scala-logging_%%",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
    ],
    "manager": "gradle",
    "packageFile": "build.gradle",
  },
  Object {
    "datasource": "maven",
    "deps": Array [
      Object {
        "currentValue": null,
        "depGroup": "org.springframework.boot",
        "depName": "org.springframework.boot:spring-boot-starter-jersey",
        "name": "spring-boot-starter-jersey",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "1.0-groovy-2.4",
        "depGroup": "org.spockframework",
        "depName": "org.spockframework:spock-core",
        "name": "spock-core",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "3.1",
        "depGroup": "cglib",
        "depName": "cglib:cglib-nodep",
        "name": "cglib-nodep",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "%scala-version%",
        "depGroup": "org.scala-lang",
        "depName": "org.scala-lang:scala-library",
        "name": "scala-library",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
        "skipReason": "version-placeholder",
      },
      Object {
        "currentValue": "3.9.0",
        "datasource": "sbt",
        "depGroup": "com.typesafe.scala-logging",
        "depName": "com.typesafe.scala-logging:scala-logging",
        "name": "scala-logging_%%",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
    ],
    "manager": "gradle",
    "packageFile": "subproject/build.gradle",
  },
]
`;

exports[`manager/gradle extractPackageFile should return gradle dependencies for build.gradle in subdirectories if there is gradlew in the same directory 1`] = `
Array [
  Object {
    "datasource": "maven",
    "deps": Array [
      Object {
        "currentValue": null,
        "depGroup": "org.springframework.boot",
        "depName": "org.springframework.boot:spring-boot-starter-jersey",
        "name": "spring-boot-starter-jersey",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "1.0-groovy-2.4",
        "depGroup": "org.spockframework",
        "depName": "org.spockframework:spock-core",
        "name": "spock-core",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "3.1",
        "depGroup": "cglib",
        "depName": "cglib:cglib-nodep",
        "name": "cglib-nodep",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "%scala-version%",
        "depGroup": "org.scala-lang",
        "depName": "org.scala-lang:scala-library",
        "name": "scala-library",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
        "skipReason": "version-placeholder",
      },
      Object {
        "currentValue": "3.9.0",
        "datasource": "sbt",
        "depGroup": "com.typesafe.scala-logging",
        "depName": "com.typesafe.scala-logging:scala-logging",
        "name": "scala-logging_%%",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
    ],
    "manager": "gradle",
    "packageFile": "foo/build.gradle",
  },
]
`;

exports[`manager/gradle extractPackageFile should return gradle.kts dependencies 1`] = `
Array [
  Object {
    "datasource": "maven",
    "deps": Array [
      Object {
        "currentValue": null,
        "depGroup": "org.springframework.boot",
        "depName": "org.springframework.boot:spring-boot-starter-jersey",
        "name": "spring-boot-starter-jersey",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "1.0-groovy-2.4",
        "depGroup": "org.spockframework",
        "depName": "org.spockframework:spock-core",
        "name": "spock-core",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "3.1",
        "depGroup": "cglib",
        "depName": "cglib:cglib-nodep",
        "name": "cglib-nodep",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "%scala-version%",
        "depGroup": "org.scala-lang",
        "depName": "org.scala-lang:scala-library",
        "name": "scala-library",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
        "skipReason": "version-placeholder",
      },
      Object {
        "currentValue": "3.9.0",
        "datasource": "sbt",
        "depGroup": "com.typesafe.scala-logging",
        "depName": "com.typesafe.scala-logging:scala-logging",
        "name": "scala-logging_%%",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
    ],
    "manager": "gradle",
    "packageFile": "build.gradle.kts",
  },
  Object {
    "datasource": "maven",
    "deps": Array [
      Object {
        "currentValue": null,
        "depGroup": "org.springframework.boot",
        "depName": "org.springframework.boot:spring-boot-starter-jersey",
        "name": "spring-boot-starter-jersey",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "1.0-groovy-2.4",
        "depGroup": "org.spockframework",
        "depName": "org.spockframework:spock-core",
        "name": "spock-core",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "3.1",
        "depGroup": "cglib",
        "depName": "cglib:cglib-nodep",
        "name": "cglib-nodep",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "%scala-version%",
        "depGroup": "org.scala-lang",
        "depName": "org.scala-lang:scala-library",
        "name": "scala-library",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
        "skipReason": "version-placeholder",
      },
      Object {
        "currentValue": "3.9.0",
        "datasource": "sbt",
        "depGroup": "com.typesafe.scala-logging",
        "depName": "com.typesafe.scala-logging:scala-logging",
        "name": "scala-logging_%%",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
    ],
    "manager": "gradle",
    "packageFile": "subproject/build.gradle.kts",
  },
]
`;

exports[`manager/gradle extractPackageFile should throw registry failure if gradle execution fails 1`] = `[Error: registry-failure]`;

exports[`manager/gradle extractPackageFile should use repositories only for current project 1`] = `
Array [
  Object {
    "datasource": "maven",
    "deps": Array [
      Object {
        "currentValue": null,
        "depGroup": "org.springframework.boot",
        "depName": "org.springframework.boot:spring-boot-starter-jersey",
        "name": "spring-boot-starter-jersey",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
      Object {
        "currentValue": "3.1",
        "depGroup": "cglib",
        "depName": "cglib:cglib-nodep",
        "name": "cglib-nodep",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
        ],
      },
      Object {
        "currentValue": "1.0-groovy-2.4",
        "depGroup": "org.spockframework",
        "depName": "org.spockframework:spock-core",
        "name": "spock-core",
        "registryUrls": Array [
          "https://repo.maven.apache.org/maven2/",
          "https://jitpack.io",
        ],
      },
    ],
    "manager": "gradle",
    "packageFile": "build.gradle",
  },
]
`;
